# Module_python

./: pyproject.toml
M02/ex0/: ft_first_exception.py
M02/ex1/: ft_raise_exception.py
M02/ex2/: ft_different_errors.py
M02/ex3/: ft_custom_errors.py
M07/: battle.py  capacitor.py  tournament.py
M07/ex0/: aqua.py  creature.py  factory.py  flame.py
M07/ex1/: __init__.py  heal.py  transform.py
M07/ex2/: __init__.py  strategy.py
M07/m08/ex0/: construct.py
M07/m08/ex1/: loading.py  pyproject.toml
M07/m08/ex2/: .env.example  .gitignore  oracle.py
M07/m09/ex0/: space_station.py
M07/m09/ex1/: alien_contact.py
